[WPE] clang warnings https://bugs.webkit.org/show_bug.cgi?id=265716

Reviewed by Michael Catanzaro.

Fix clang warnings and un-do the Cog meson --wipe change, that should be handled at the EWS level.
Re-configuring Cog for each incremental build shouldn't be needed.

* Source/WebKit/WPEPlatform/wpe/drm/WPEDRM.h:
* Source/WebKit/WPEPlatform/wpe/wayland/WPEViewWayland.cpp:
* Source/WebKit/WebProcess/WebPage/dmabuf/AcceleratedSurfaceDMABuf.h:
* Tools/PlatformWPE.cmake:

Canonical link: https://commits.webkit.org/271427@main