Source/WebKit/WPEPlatform/wpe/wayland/WPEViewWayland.cpp
@@ -209,7 +209,17 @@ static const struct wl_surface_listener surfaceListener = {
         view->priv->wlOutputs.removeLast(output);
         wpe_view_wayland_update_scale(view);
         output->removeScaleObserver(view);
-    }
+    },
+#ifdef WL_SURFACE_PREFERRED_BUFFER_SCALE_SINCE_VERSION
+    // preferred_buffer_scale
+    [](void*, struct wl_surface*, int /* factor */)
+    {
+    },
+#endif
+    // axis_relative_direction
+    [](void*, struct wl_surface*, uint32_t /* direction */)
+    {
+    },
 };
 
 static const struct zwp_linux_dmabuf_feedback_v1_listener linuxDMABufFeedbackListener = {
